[package]
name = "thanks"
version = "0.1.0"
authors = ["The Rust Project Developers"]
edition = "2018"

[dependencies]
git2 = "0.8"
serde = { version = "1", features = ["derive"] }
semver = "0.9"
tempfile = "3"
lazy_static = "1"
handlebars = "2.0.0-beta.2"
walkdir = "2"

[profile.release]
debug = 2
