[package]
name = "thanks"
version = "0.1.0"
authors = ["The Rust Project Developers"]
edition = "2018"

[dependencies]
git2 = "0.13"
serde = { version = "1", features = ["derive"] }
semver = "1"
tempfile = "3"
lazy_static = "1"
handlebars = { version = "4.1.1", features = ["dir_source"] }
walkdir = "2"
regex = "1.5.5"
mailmap = { path = "./mailmap" }
ureq = { version = "2.6.2", features = ["json"] }
uncased = "0.9.10"

[profile.release]
debug = 2

[workspace]
