[package]
name = "mailmap"
version = "0.1.0"
authors = ["Mark Rousskov <mark.simulacrum@gmail.com>"]
edition = "2018"
description = "Parses mailmap files into Rust structures"
repository = "https://github.com/rust-lang/thanks"
readme = "README.md"
keywords = ["git", "mailmap"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"

[dependencies]
uncased = "0.9.10"
